--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,9 +1,6 @@
 #
-#Mon Jul 15 13:23:10 PDT 2019
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f86c6f65de49a1ea6ceda521d64aed4e
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v1.40\\bin
-configurations-xml=e1cfa384f18824d4ebc91d034d2ca008
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=fe6bc8387062251d924fb28d44703093
-default.languagetoolchain.version=1.40
-host.platform=windows
-conf.ids=default
+#Tue Jul 16 11:09:05 PDT 2019
+configurations-xml=3adaa179641564f60d56b9cf727e1c5e
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=37eccb08230908d044ad3fe14e24ea9a
+host.platform=mac
+conf.ids=
