--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,6 +1,9 @@
 #
-#Tue Jul 16 11:09:05 PDT 2019
-configurations-xml=3adaa179641564f60d56b9cf727e1c5e
+#Tue Jul 16 23:32:06 PDT 2019
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=af6fe09cc582a0daace7b80bb4f7bbe2
+default.languagetoolchain.dir=/Applications/microchip/xc32/v2.20/bin
+configurations-xml=e1cfa384f18824d4ebc91d034d2ca008
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=37eccb08230908d044ad3fe14e24ea9a
+default.languagetoolchain.version=2.20
 host.platform=mac
-conf.ids=
+conf.ids=default
